--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/router-devtools": "^1.78.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
